fix layout bugs on laptop screens

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -104,8 +104,6 @@
 }
 
 .content3 {
-  padding-left: 200px;
-  padding-right: 200px;
   margin-top: 200px;
   width: 100%;
   display: flex;
@@ -135,25 +133,35 @@
 }
 
 .content4 {
-
+  // border: 1px solid red;
   margin-top: 200px;
   display: flex;
   justify-content: center;
 
   .bg_box {
     display: flex;
-    justify-content: end;
+    position: relative;
+    width: 100%;
+    // justify-content: end;
     z-index: 1;
     .bg2_img {
-      margin-left: -300px;
-      margin-right: -300px;
-      height: 570px;
+      // margin-left: -300px;
+      // margin-right: -300px;
+      width: 100%;
+      // height: 570px;
+      max-height: 570px;
     }
     .sun_img {
+      // border: 1px solid red;
       position: absolute;
-      margin-right: -300px;
-      margin-top: -150px;
-      height: 300px;
+      top: -140px;
+      right: 0;
+      // width: 100%;
+      // margin-right: -300px;
+      // margin-top: -150px;
+      z-index: 2;
+      // height: 300px;
+      max-height: 300px;
     }
   }
 
